--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "@solana/spl-token": "^0.1.8"
     },
     "devDependencies": {
+        "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
